--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,12 @@
 </head>
 
 <body>
-  <!-- <div>%REACT_APP_NOT_SECRET_CODE%</div> -->
+  <div>%REACT_APP_NOT_SECRET_CODE%</div>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <!-- webpack register script -->
+  <!-- <script defer="defer" src="main.js"></script> -->
+
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
