--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <div>%REACT_APP_NOT_SECRET_CODE%</div>
+  <div style="display: flex; justify-content: center;">%REACT_APP_NOT_SECRET_CODE%</div>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!-- webpack register script -->
